--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -13,7 +13,7 @@
 <body>
 <nav th:insert="header.html :: header"></nav>
 <div class="container">
-    <form th:action="@{/submit}" th:object="${userOrderForm}" class="form-horizontal" method="post">
+    <form id="inputForm" th:action="@{/submit}" th:object="${userOrderForm}" class="form-horizontal" method="post">
         <div class="progress-icon">
             <img src="../img/progress_input.svg"/>
         </div>
@@ -132,6 +132,17 @@
          </div>
      </form>
  </div>
+<script>
+document.getElementById("inputForm").onkeypress = (e) => {
+  // inputFormに入力されたキーを取得
+  const key = e.keyCode || e.charCode || 0;
+  // 13はEnterキーのキーコード
+  if (key == 13) {
+    // アクションを行わない
+    e.preventDefault();
+  }
+}
+</script>
  <script src="../js/jquery-3.5.1.min.js" th:src="@{/js/jquery-3.5.1.min.js}"></script>
  <script src="../js/popper.min.js" th:src="@{/js/popper.min.js}"></script>
  <script src="../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
